k8s/bootstrap/argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: argocd.jameshounshell.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - jameshounshell.com
